# volume-control-cli

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: GenerateRelease.yml
vccli/: AudioAPI.hpp  CMakeLists.txt  Volume.hpp  util.hpp  vccli.cpp
